<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loengute Reitimine</string>
    <string name="radio_button_monday">Esmaspäev</string>
    <string name="radio_button_tuesday">Teisipäev</string>
    <string name="radio_button_wednesday">Kolmapäev</string>
    <string name="radio_button_thursday">Neljapäev</string>
    <string name="radio_button_friday">Reede</string>
	<string name="radio_button_8to10">08:00&#8211;10:00</string>
	<string name="radio_button_10to12">10:00&#8211;12:00</string>
	<string name="radio_button_12to14">12:00&#8211;14:00</string>
	<string name="radio_button_14to16">14:00&#8211;16:00</string>
	<string name="radio_button_16to18">16:00&#8211;18:00</string>
	<string name="text_choose_day">Vali päev</string>
	<string name="text_choose_time">Vali aeg</string>
	<string name="button_text_search">Otsi</string>
    <string name="retry">Retry</string>
<<<<<<< HEAD
    <string name="cancel">Cancel</string>
    <string name="menu_settings">Menu settings</string>
=======
    <string name="cancel">Cancel</string>text_lisa_kommentaartext_lisa_kommentaar
    <string name="text_add_comment">Lisa kommentaar</string>
    <string name="text_add_rating">ANNA REITING</string>
>>>>>>> refs/remotes/origin/Nv

</resources>
